# Reviewdibo-Assessment

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  start.sh
backend/app/: main.py  seed.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  product.py  review.py  user.py
backend/app/repositories/: product_repository.py  review_repository.py  user_repository.py
backend/app/routers/: products.py  reviews.py  users.py
backend/app/schemas/: product.py  review.py  user.py
backend/app/services/: product_service.py  review_service.py  user_service.py
backend/app/tests/: conftest.py  test_health.py  test_products.py  test_reviews.py  test_users.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/products/[id]/: page.tsx
frontend/components/: ProductCard.tsx  ReviewCard.tsx  ReviewForm.tsx  StarRating.tsx
frontend/lib/: api.ts  types.ts
